force-app/main/default/objects/Integration_Mapping__mdt/fields/Execution_Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Frequency_Type__c</fullName>
    <defaultValue>"Daily"</defaultValue>
    <description>Type of execution frequency for this mapping: Hourly, Daily, Weekly, or Custom Minutes</description>
    <label>Execution Frequency Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>