force-app/main/default/objects/Integration_Mapping__mdt/fields/Execution_Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Execution_Frequency_Value__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Frequency value: hours for Hourly, days for Daily/Weekly, or custom minutes for Custom Minutes type</description>
    <label>Execution Frequency Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>