force-app/main/default/objects/Integration_Mapping__mdt/fields/GraphQL_Query__c.field-meta.xml
<CustomField>
    <fullName>GraphQL_Query__c</fullName>
    <description>Full GraphQL query string including variables (e.g. $first: Int, $after: String). Only used when endpoint Protocol_Type__c = GraphQL.</description>
    <label>GraphQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>